WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47791
Strict mode: arguments is not valid as the base expression for pre- or post-fix expressions
https://bugs.webkit.org/show_bug.cgi?id=47791
Summary
Strict mode: arguments is not valid as the base expression for pre- or post-f...
Oliver Hunt
Reported
2010-10-17 21:26:42 PDT
Strict mode: arguments is not valid as the base expression for pre- or post-fix expressions
Attachments
Patch
(7.16 KB, patch)
2010-10-17 21:48 PDT
,
Oliver Hunt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-10-17 21:48:30 PDT
Created
attachment 70995
[details]
Patch
Oliver Hunt
Comment 2
2010-10-17 22:42:54 PDT
Committed
r69941
: <
http://trac.webkit.org/changeset/69941
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug