2010-10-17  Oliver Hunt  <oliver@apple.com>

Reviewed by Sam Weinig.

        Strict mode: arguments is not valid as the base expression for pre- or post-fix expressions
        https://bugs.webkit.org/show_bug.cgi?id=47791

        Simple fix, check for arguments in addition to eval.

        * parser/JSParser.cpp:
        (JSC::JSParser::parseUnaryExpression):
2010-10-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam Weinig.

        Strict mode: arguments is not valid as the base expression for pre- or post-fix expressions
        https://bugs.webkit.org/show_bug.cgi?id=47791

        Add arguments tests, and make pre-/post-fix expression tests cover another case I was
        needlessly worried about.

        * fast/js/basic-strict-mode-expected.txt:
        * fast/js/script-tests/basic-strict-mode.js:

Canonical link: https://commits.webkit.org/60507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69941 268f45cc-cd09-0410-ab3c-d52691b4dbfc